--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "^14"
+    "node": ">=14.17.0"
   },
   "dependencies": {
     "chrome-aws-lambda": "^6",
